--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ html{
   display: flex;
   justify-content: space-evenly;
   min-height: auto;
-  padding-top: 30px;
+  padding-top: 25px;
   min-width: 0;
   color: red;
 flex-wrap: wrap;
@@ -45,6 +45,19 @@ max-width: 20px;
   display: inline-block;
   position: relative;
   text-align: center;
- 
+}
 
+.HomePageText{
+  font-family: "Jersey 20";
+  font-size: 50px;
+  padding-left: 10px;
+}
+
+#Information{
+  padding-top: 20px;
+  max-width:  890px;
+}
+.ProjectContainer{
+  display: grid;
+  grid-auto-columns:min-content(20px)
 }
